--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,12 @@
     <packaging>war</packaging>
 
     <dependencies>
-        <!-- TODO: add dependencies -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
